--- a/website/css/main.css
+++ b/website/css/main.css
@@ -33,7 +33,7 @@ h5{font-size:28px;font-weight:600;margin:15px 0;color:#384047;}
 h6{font-size:16px;font-weight:600;margin:10px 0;color:#384047;}
 
 a{color:#5173bd;}
-a:hover,a:focus{color:#5173bd;}
+a:hover,a:focus{color:#5173bd;text-decoration: none;}
 
 .preloader{
 	background-color:#FFFFFF;
@@ -112,7 +112,7 @@ a:hover,a:focus{color:#5173bd;}
 	color:#FFF;
 	text-align:center;
 	text-shadow:0 1px 0 rgba(0,0,0,.1);
-	background-color:#6883cc;
+	background-color:#cccccc;
 	background-image:url("../images/header.png");
 	background-repeat:no-repeat;
 	background-position:center center;
@@ -281,7 +281,7 @@ to {
 	transform: translateY(-20px);
 }
 }
-.scrollto, .scrollto:hover {
+.scrollto, .scrollto:visited, .scrollto:hover, .scrollto:active {
 	margin:30px;
 	display:block;
 	color:#FFF;
@@ -353,8 +353,7 @@ to {
 	-webkit-border-radius:5px;
 	-moz-border-radius:5px;
 	border-radius:5px;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	font-style:italic;
+	font-family:sans-serif;
 	position:relative;
 	line-height:28px;
 	font-size:16px;
